fixed a couple spacing issues

--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,11 @@ body{
   flex-direction: column;
   align-items: center;
   background-color: hsl(225, 100%, 98%);
-  width: 35%;
   border-radius: 8px;
   position: absolute;
   top: 15%;
   padding: 0px, 20px, 25px 20px;
-  width: 350px;
+  width: 400px;
 }
 
 .hero{
@@ -48,8 +47,10 @@ p {
   text-align: center;
   padding: 0px 15px;
   margin-top: -10px;
+  margin-bottom: 30px;
   font-size: 16px;
   color: hsl(224, 23%, 55%);
+  width: 350px;
 }
 
 .displayColumn{
@@ -64,7 +65,7 @@ p {
   justify-content: space-between;
   align-items: center;
   background-color: hsl(228, 100%, 96%);
-  width: 300px;
+  width: 350px;
   height: 60px;
   padding: 7px 3px;
   margin-bottom: 20px;
@@ -97,6 +98,7 @@ p {
 }
 
 .paymentButton{
+  margin-top: 15px;
   background-color: hsl(245, 75%, 52%);
   color:hsl(228, 100%, 96%);
   border: solid hsl(223, 47%, 23%) 1px;
@@ -108,7 +110,7 @@ p {
 }
 
 .cancelButton, .paymentButton{
-  width: 300px;
+  width: 350px;
   text-align: center;
   padding: 8px 0px;
   border-radius: 8px;
